--- a/app/src/main/res/layout/content_equipe.xml
+++ b/app/src/main/res/layout/content_equipe.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".EquipesActivity"
+    tools:context=".Equipe"
     tools:showIn="@layout/activity_equipe">
 
     <LinearLayout
@@ -15,13 +15,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginBottom="@dimen/margin_bot"
             android:layout_height="wrap_content">
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/btDownloadEquipe"
-                android:layout_marginBottom="@dimen/margin_bot"
-                android:layout_marginTop="@dimen/margin_top"
                 android:text="@string/btDownloadEquipe"/>
             <Button
                 android:layout_width="wrap_content"
@@ -31,8 +32,8 @@
                 android:id="@+id/btAtt"/>
         </LinearLayout>
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/lvLista"
             android:layout_marginLeft="@dimen/margin_left"></ListView>
 
