--- a/app/src/main/res/layout/content_time.xml
+++ b/app/src/main/res/layout/content_time.xml
@@ -8,10 +8,92 @@
     tools:context="brunoszczuk.com.br.apptrab2bim.Time"
     tools:showIn="@layout/activity_time">
 
-    <TextView
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_top"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top"
+            android:id="@+id/ivImagem"/>
+        <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/margin_left">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/letraTime"
+            android:layout_marginTop="@dimen/margin_top"
+            android:text="@string/cdEquipe"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top"
+            android:textSize="@dimen/letraTime"
+            android:id="@+id/tvCdEquipe" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/letraTime"
+            android:layout_marginTop="@dimen/margin_top"
+            android:textStyle="bold"
+            android:layout_marginLeft="@dimen/margin_left"
+            android:text="@string/sgEquipe"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/letraTime"
+            android:layout_marginTop="@dimen/margin_top"
+            android:id="@+id/tvSgEquipe"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="@dimen/margin_left">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/letraTime"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/margin_top"
+                android:text="@string/nmEquipe"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_top"
+                android:textSize="@dimen/letraTime"
+                android:id="@+id/tvNmEquipe" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/letraTime"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/margin_top"
+                android:layout_marginLeft="@dimen/margin_left"
+                android:text="@string/nmSlug"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_top"
+                android:textSize="@dimen/letraTime"
+                android:id="@+id/tvNmSlug"/>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
