--- a/app/src/main/res/layout/item_classificacao.xml
+++ b/app/src/main/res/layout/item_classificacao.xml
@@ -13,12 +13,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:id="@+id/tvPosicao"
-            android:text="Posicao"
             />
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:layout_marginLeft="@dimen/margin_left"
             android:id="@+id/ivImagem"/>
         <TextView
